# software-architecture-diagrams

./: README.md  generate_all.ps1  pyproject.toml
architecture_diagrams/machine_learning/cost_effective_remote_compute/: README.md  base.py
diagrams/machine-learning/cost-effective-remote-compute/: README.md
