[tool.poetry]
name = "software-architecture-diagrams"
version = "0.1.0"
description = ""
authors = ["Robert Smieja <robertsmieja@users.noreply.github.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
diagrams = "^0.23.4"


[tool.poetry.group.dev.dependencies]
black = "^24.4.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
